--- a/musa.html
+++ b/musa.html
@@ -5,7 +5,7 @@
 <body>
 
     <h1>
-        bilal deneme 2 demene  bilal deneme musa
+        bilal deneme 2 demene  
     </h1>
     <h1>
         musa deneme
